--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,19 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
+
 @import 'tailwindcss/utilities';
+
+.fade-enter-active {
+  @apply transition ease-out duration-100;
+}
+.fade-enter,
+.fade-leave-to {
+  @apply transform opacity-0 scale-95;
+}
+.fade-enter-to,
+.fade-leave {
+  @apply transform opacity-100 scale-100;
+}
+.fade-leave-active {
+  @apply transition ease-in duration-75;
+}
